Did some weird thing with picture sizes

--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -40,7 +40,7 @@
             <button class="btn btn-danger" href="javascript://" (click)="onCloseItem(i)">Close</button>
         </div>
         <div class="card-img">
-            <img src="http://placehold.it/510x48">
+            <img src="http://placehold.it/510x{{randomTemp[i]}}">
         </div>
     </a>
             </div>
